# OpenNOVA_EvalHarnessSystem

./: .gitignore  README.md
infra/: heartbeat_monitor.py
infra/sound/: sound_utils.py  tools_config.yaml
memory/: memory_registry.yaml  retrieval_protocol.yaml
memory/handoff/: .session_handoff.md  create_db.py  handoff-query.py  handoff_policy.yaml  handoffs.db  migrate_archives.py  migrate_handoff.py
memory/self-maint/: audit_format.py  audit_scope_recall.py  compress_handoffs.py
memory/skills/: memory_audit_skill.md
registry/: README.md  executor_registry.yaml  hook_registry.yaml  mcp_registry.yaml  promotion_mapping.md  registry_schema.md  skill_registry.yaml  skill_registry.yaml.bak
registry/mcp/zhipu/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
registry/mcp/zhipu/src/zhipu_mcp/: __init__.py  server.py
registry/plugins/thinking-fixer/: __init__.py  __main__.py  fixer.py
registry/skills/closeout-gate/: SKILL.md
registry/skills/dag-execution/: SKILL.md
registry/skills/dispatch-prompt-authoring/: SKILL.md
runner/: __init__.py  cli.py  executor_registry.py  extractors.py  output_validator.py  path_resolver.py  pm_runtime_self_maint.py  recovery.py  relay_runner.py  state_watcher.py
runner/claude/: safety_context.py  tmux_executor.py
runner/codex/: approver_daemon.py  execution_context.py  executor.py  tmux_executor.py
runner/templates/: dispatch.template.yaml  receipt.template.yaml  task_config.yaml
self-maint/: KNOWN_BLIND_SPOTS.md  drift_check.py  proposal_apply.py  scan_proposal.py
(+35 files in other folders)
