[project]
name = "zhipu-mcp"
version = "0.1.0"
description = "智谱AI网络搜索MCP服务器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
zhipu-mcp = "zhipu_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zhipu_mcp"]

